--- a/style.css
+++ b/style.css
@@ -15,3 +15,21 @@ html, body {
     font-size: 25px;
     padding-bottom: 20px;
 }
+
+#RGB, #HSV {
+    background: rgba(0, 0, 0, 0.5);
+    color: #FFF;
+    position: absolute;
+    text-align: cente;
+    top: 80%;
+    font-size: 25px;
+    padding: 10px;
+}
+
+#RGB {
+    left: 30%;
+}
+
+#HSV {
+    right: 30%;
+}
