--- a/style.css
+++ b/style.css
@@ -16,22 +16,42 @@ html, body {
     padding-bottom: 20px;
 }
 
-#RGB, #HSV {
-    background: rgba(0, 0, 0, 0.5);
-    color: #FFF;
+#menu {
     position: absolute;
-    text-align: cente;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    bottom: 0%;
+    color: #FFF;
+    font-size: 25px;
+    font-weight: bold;
+}
+#menu ul {
+    list-style: none;
+    margin-top: 0px;
+}
+#menu li {
+    float: left;
+    padding: 10px 40px;
+    
+}
+#menu li a {
+    color: #FFF;
+}
+
+#info {
+    position: absolute;
     top: 100%;
+    width: 100%;
+    height: 200px;
+}
+
+#RGB, #HSV, #HSL {
+    float: left;
+    text-align: cente;
+    top: 0px;
     font-size: 25px;
     padding: 10px;
-}
-
-#RGB {
-    left: 30%;
-}
-
-#HSV {
-    right: 30%;
+    margin: 0px 20px;
 }
 
 #schemes {
@@ -59,6 +79,10 @@ html, body {
 
 #shades {
     color: #FFF;
+}
+
+#tints {
+    color: #000;
 }
 
 #analogous .color, #complementary .color {
