--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
+@font-face{
+    font-family: "Comfortaa-Bold";
+    src: url('Comfortaa-Bold.ttf');
+}
+@font-face{
+    font-family: "Comfortaa-Light";
+    src: url('Comfortaa-Light.ttf');
+}
+@font-face{
+    font-family: "Comfortaa";
+    src: url('Comfortaa-Regular.ttf');
+}
+
 html, body {
     padding: 0px;
     margin: 0px;
-    font-family: verdana;
+    font-family: "Comfortaa";
     color: #000;
 }
 
@@ -39,30 +52,40 @@ html, body {
     color: #FFF;
 }
 
-#info {
+#page {
     position: absolute;
     top: 100%;
     width: 100%;
-    height: 200px;
 }
 
-#RGB, #HSV, #HSL {
+#page h1, h3 {
+    margin-left: 20px;
+    margin-bottom: 5px;
+}
+
+#info {
+    clear: both;
+    height: 120px;
+    font-size: 25px;
+}
+
+#RGB, #HSV, #HSL, #colorInfo {
     float: left;
     text-align: cente;
     top: 0px;
-    font-size: 25px;
     padding: 10px;
     margin: 0px 20px;
 }
 
-#schemes {
-    position: absolute;
-    top: 120%;
-    width: 100%;
+#colorInfo {
+    width: 420px;
 }
 
-#schemes h1, h3 {
-    margin-left: 20px;
+#schemes {
+    /*position: absolute;
+    top: 120%;*/
+    clear: both;
+    width: 100%;
 }
 
 .scheme {
@@ -82,6 +105,10 @@ html, body {
     color: #FFF;
 }
 
+#shades h3 {
+    color: #000;
+}
+
 #tints {
     color: #000;
 }
@@ -95,11 +122,13 @@ html, body {
 }
 
 #generate {
-    position: absolute;
-    top: 250%;
+    clear: both;
 }
 
 #about {
-    position: absolute;
-    top: 300%;
+    clear: both;
+}
+
+#advertisement {
+    clear: both;
 }
