--- a/teststyle.css
+++ b/teststyle.css
@@ -1,3 +1,3 @@
-.randomColorOfTheDay {
-    background: var(--randomColorOfTheDay);
+.randomColorEveryDay {
+    background: var(--randomColorEveryDay);
 }
