--- a/style.css
+++ b/style.css
@@ -147,6 +147,7 @@ code {
     height: 40px;
     width: 8.3333333%;
     text-align: center;
+    -webkit-transition: 0.5s;
     transition: 0.5s;
 }
 
