Added Tones (changing saturation)

--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ html, body {
     color: #000;
 }
 
+#tones .color {
+    width: 11.1111%;
+}
+
 #analogous .color, #complementary .color, #similar .color {
     width: 14.2857%;
 }
