--- a/style.css
+++ b/style.css
@@ -180,3 +180,26 @@ code {
 #logo-small:hover {
     opacity: 0.8;
 }
+
+input {
+    border: 1px solid #555555;
+    padding: 5px;
+    border-radius: 5px;
+    height: 30px;
+    font-size: 20px;
+    display: inline-block;
+    width: 90px;
+}
+
+input[type=submit] {
+    height: 40px;
+    width: 100px;
+}
+
+input[type=text] {
+    background-color: white;
+    background-image: url('hash.jpg');
+    background-position: 0px 0px; 
+    background-repeat: no-repeat;
+    padding-left: 40px;
+}
