--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 html, body {
     padding: 0px;
     margin: 0px;
-    font-family: "Comfortaa";
+    font-family: "Comfortaa", sans-serif;
     color: #000;
 }
 
@@ -73,12 +73,12 @@ html, body {
     float: left;
     text-align: cente;
     top: 0px;
-    padding: 10px;
-    margin: 0px 20px;
+    padding: 8px;
+    margin: 0px 10px;
 }
 
 #colorInfo {
-    width: 420px;
+    width: 380px;
 }
 
 #schemes {
@@ -202,4 +202,53 @@ input[type=text] {
     background-position: 0px 0px; 
     background-repeat: no-repeat;
     padding-left: 40px;
+}
+
+@media screen and (max-width: 1050px) {
+    #title {
+        left: 10%;
+        right: 10%;
+        top: 15%;
+        font-size: 20px;
+    }
+    
+    #menu {
+        font-size: 20px;
+    }
+    #menu li {
+        float: left;
+        padding: 5px 8px;
+
+    }
+    p {
+        margin-left: 2px;
+        font-size: 15px;
+    }
+    .scheme {
+        height: 250px;
+    }
+    .color {
+        width: 20%;
+    }
+    #tones .color {
+        width: 20%;
+    }
+
+    #analogous .color, #complementary .color, #similar .color {
+        width: 25%;
+    }
+
+    #triadic .color {
+        width: 33.3332%;
+    }    
+    .previousColor {
+        width: 20%;
+    }
+
+    .previousColor span {
+        opacity: 0.7;
+    }
+    .previousColor span:hover {
+        opacity: 1;
+    }
 }
